--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -43,9 +43,7 @@
               </div>
               {% endfor %}
               Código de rastreamento: {{pedido_recente.codigoRastreamento}}<br>
-              <form action="/Assinante/Historico/{{pedido_recente.numero}}/">
-                <input type="submit" value="Ver minhas outras entregas" class="btn-primary">
-              </form>
+              <br><a href="/Assinante/Historico/{{pedido_recente.numero}}/"><button class="btn-primary">Ver minhas outras entregas</button></a>
 
               {% endif %}
 
@@ -72,31 +70,22 @@
                   <strong>{{genero.nome}}</strong><br>
                 {% endfor %}
               processador <strong>{{assinatura.processador.proc}}</strong><br>
-              <form action="{% url 'CadastroAssinatura' %}">
-                <input type="submit" value="Editar assinatura!" class="btn-primary">
-              </form>
+              <a href="{% url 'Assinatura' %}"><button class="btn-primary">Editar assinatura</button></a>
             {% else %}
-              <form action="{% url 'CadastroAssinatura' %}">
-                <input type="submit" value="Edite sua assinatura para reativá-la!" class="btn-primary">
-              </form>
+              Você desativou sua assinatura...
+              <a href="{% url 'Assinatura' %}">Edite sua assinatura para reativá-la</a>
             {% endif %}
           {% else %}
             {% if dados_completos %}
               Você ainda não completou sua assinatura... <br>
-              <form action="{% url 'CadastroAssinatura' %}">
-                <input type="submit" value="Diga-nos suas preferências e comece a receber jogos!" class="btn-primary">
-              </form>
+              <a href="{% url 'Assinatura' %}">Diga-nos suas preferências e comece a receber jogos!</a>
             {% else %}
               Você ainda não completou agumas informações... <br>
               {% if not tem_infos_pagamento %}
-                <form action="{% url 'InfoPagamento' %}">
-                  <input type="submit" value="Complete suas informações de pagamento" class="btn-primary">
-                </form>
+                <a href="{% url 'InfoPagamento' %}">Complete suas informações de pagamento</a><br>
               {% endif %}
               {% if not tem_infos_endereco %}
-                <form action="{% url 'CadastroEndereco' %}">
-                  <input type="submit" value="Complete suas informações de endereco" class="btn-primary">
-                </form>
+                <a href="{% url 'CadastroEndereco' %}">Complete suas informações de endereco</a><br>
               {% endif %}
               Complete suas informações para poder fazer sua assinatura!
             {% endif %}
@@ -113,14 +102,11 @@
           {% if tem_infos_endereco %}
             <strong>Rua</strong> {{infos_endereco.rua}},{{infos_endereco.numeroRua}},{{infos_endereco.complemento}} <br>
             <strong>CEP</strong> {{infos_endereco.CEP}} <br>
-            <form action="{% url 'CadastroEndereco' %}">
-              <input type="submit" value="Editar informações de endereco" class="btn-primary">
-            </form>
+            <a href="{% url 'CadastroEndereco' %}"><button class="btn-primary">Editar informações de endereco</button></a>
           {% else %}
           Você ainda não registrou suas informações de endereço...
-            <form action="{% url 'CadastroEndereco' %}">
-              <input type="submit" value="Registrar suas informações de endereço!" class="btn-primary">
-            </form>
+          <a href="{% url 'CadastroEndereco' %}"><br>
+            <button class="btn-primary">Registrar suas informações de endereço!</button></a>
           {% endif %}
         </div>
       </div>
@@ -134,14 +120,11 @@
             <strong>Titular</strong> {{infos_pagamento.nomeTitular}} <br>
             <strong>Nº Cartao</strong> {{infos_pagamento.numeroCartao}} <br>
             <strong>Código de seguranca</strong> {{infos_pagamento.codigoSeguranca}} <br>
-            <form action="{% url 'InfoPagamento' %}">
-              <input type="submit" value="Editar informações de pagamento" class="btn-primary">
-            </form>
+            <a href="{% url 'InfoPagamento' %}"><button class="btn-primary">Editar informações de pagamento</button></a>
           {% else %}
             Você ainda não registrou suas informações de pagamento...
-              <form action="{% url 'InfoPagamento' %}">
-                <input type="submit" value="Registrar suas informações de pagamento!" class="btn-primary">
-              </form>
+            <a href="{% url 'InfoPagamento' %}"><br>
+              <button class="btn-primary">Registrar suas informações de pagamento!</button></a>
           {% endif %}
         </div>
       </div>
@@ -151,10 +134,51 @@
           <div class="panel-heading">
             <h3 class="panel-title">Outras opções</h3>
           </div>
-          <a href="#">Editar senha e nome de usuário</a> <br>
-          <a href="{% url 'ContatoAdmin' %}">Contatar um administrador</a> <br>
+          <a href="{% url 'EditarCadastro' %}"><button class="btn-primary" >Editar informações de cadastro</button></a> <br><br>
+
+            <a href="" data-toggle="modal" data-target="#myModal"><button class="btn-primary">Contatar um administrador</button></a>
+           <br>
         </div>
       </div>
 
+
+    <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Escreva sua mensagem</h4>
+              </div>
+              <div class="modal-body">
+                  <form role="form" action="#" method="post">
+                      {% csrf_token %}
+
+                      <strong>Nome:</strong><br>
+                      <input class="form-control" type="text" name="firstname" placeholder="Nome">
+                      <br>
+                      <strong>E-Mail:</strong><br>
+                      <input class="form-control" type="text" name="email" placeholder="E-Mail">
+                      <br>
+
+                      <label for="{{ form.assuntoForm.id_for_label }}">Assunto:</label>
+                      {{ form.assuntoForm.errors }}
+                      <input class="form-control"  id="{{ form.assuntoForm.id_for_label }}" name="assuntoForm" type="text"  placeholder="Assunto" {% if form.assuntoForm.value != None %}value="{{ form.assuntoForm.value }}" {% endif %}/>
+
+                      <br>
+
+                      <label for="{{ form.menssagemForm.id_for_label }}">Mensagem:</label>
+                      {{ form.menssagemForm.errors }}
+                      <textarea class="form-control"  id="{{ form.menssagemForm.id_for_label }}" name="menssagemForm" type="text"  placeholder="Mensagem" {% if form.menssagemForm.value != None %}value="{{ form.menssagemForm.value }}" {% endif %} rows="4" cols="50"></textarea>
+                  </form>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
     {% endblock %}
