--- a/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
+++ b/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
@@ -1,24 +1,16 @@
 {% extends "MainPage.html" %}
 
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
 <body>
       <h1>HISTÓRICO</h1>
       mostrar aqui o pedido {{num_pedido}} do assinante {{user.username}}<br>
-      {{pedido.data}}
+      {{pedido1.data}}
 
 
+      {% if digital1 %}
+      dig {{pedido1.numero}}<br>
 
-
-      {% if digital %}
-      dig {{pedido.numero}}<br>
-
-      {% for chave in chaves %}
+      {% for chave in chaves1 %}
       <div class="col-xs-12 col-sm-6 placeholder">
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -35,7 +27,7 @@
       {% else %}
       fis <br>
 
-      {% for jogo in pedido.jogosPedidos.all %}
+      {% for jogo in pedido1.jogosPedidos.all %}
 
       <div class="col-xs-12 col-sm-6 placeholder">
         <div class="panel panel-primary">
@@ -49,7 +41,7 @@
       </div>
 
       {% endfor %}
-      Código de rastreamento: {{pedido.codigoRastreamento}}<br>
+      Código de rastreamento: {{pedido1.codigoRastreamento}}<br>
 
       {% endif %}
 
